--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = "mongodb://localhost:27017mongodb+srv://quanghai2k4db:T8PDPKqfGE3jrhXY@leighty-database.lgrpgkv.mongodb.net/"
+ATLAS_URI = "mongodb+srv://quanghai2k4db:T8PDPKqfGE3jrhXY@leighty-database.lgrpgkv.mongodb.net/"
